2003-05-21  Matti Aarnio  <mea@zmailer.org>

	* scheduler/scheduler.c, scheduler/update.c:
	    Moved  global_wrkcnt,  and  MIBMtaEntry->mtaStoredMessages
	    counter managements around so that they are essentially
	    tracking on how many memory instances there are of the
	    'struct ctlfile' objects.  Strictly speaking this isn't
	    the same as count of jobs, but a lot simpler to do..

	* scheduler/update.c:
	    When reporting 'multiple processing of address ...',
	    do mention also channel & host data for the _process_
	    which is reporting.

2003-05-20  Matti Aarnio  <mea@zmailer.org>

	* configure.in:
	    Mark version: 2.99.56-pre6

	* router/rfc822.c:
	    Eugene Crosser reported that envelope header
	    "with" without a value does cause router process
	    to drop core.  Indeed it does that.  Oops.
	    (denial of service attack is possible from
	    inside the system.)

	* man/smtpserver.8.in, man/zmailer.3.in:
	    Reworked/updated environment variable pickups of these
	    programs.

	* smtpserver/smtptls.c:
	    Instead of picking the POSTOFFICE location all by itself,
	    use smtpserver process global value.

	* smtpserver/smtpserver.c:
	    Andrey Blochintsev <bag@iptelecom.net.ua>  sent
	    a patch to move  WHOSON  lookup upwards a bit
	    so that the data is available, when it is being
	    logged.

	* INSTALL:
	    Updated to match the reality a bit better, than
	    what it has been for a long time...

2003-05-15  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/contentpolicy.c, smtpserver/smtprouter.c,
	  smtpserver/smtpserver.c, smtpserver/smtpserver.h:
	    From  Andrey Blochintsev <bag@iptelecom.net.ua>
	    spotted process deaths by NULL pointer referral
	    during state cleanup.

	* transports/mailbox/mailbox.c:
	    Turning EDQUOT failure to instant permanent failure.

2003-05-13  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/policytest.c, smtpserver/smtpserver.c:
	    Removed  printf()s  from policy-test debug outputs,