@@ -6,6 +6,10 @@ __STDPP__directive pragma pp:hide getpagesize
 
 #include	"sfhdr.h"
 
+#if _lib_memalign
+extern void *memalign _ARG_((size_t boundary, size_t size));
+#endif
+
 #if defined(__STDPP__directive) && defined(__STDPP__hide)
 __STDPP__directive pragma pp:nohide getpagesize
 #else
